# RealTime-Edge-Detection-Viewer

./: README.md  README.txt
.github/workflows/: android-build.yml
app/: CMakeLists.txt  build.gradle
gl/: GLRenderer.java
jni/: CMakeLists.txt  edge_detector.cpp
scripts/: fetch_jdk17.ps1  fetch_opencv.ps1  install_gradle.ps1
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: main.ts
